--- a/dm-package/pom.xml
+++ b/dm-package/pom.xml
@@ -45,7 +45,7 @@
         <version>6.6.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>jahia-dm-pack-war</artifactId>
+    <artifactId>jahia-dm-package</artifactId>
     <name>Jahia Document Management Module Package WAR</name>
     <packaging>war</packaging>
 
