--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -207,33 +207,6 @@
                         <version>2.4</version>
                         <executions>
                             <execution>
-                                <id>copy-docspace</id>
-                                <phase>process-resources</phase>
-                                <goals>
-                                    <goal>copy</goal>
-                                </goals>
-                                <configuration>
-                                    <artifactItems>
-                                        <artifactItem>
-                                            <groupId>org.jahia.modules</groupId>
-                                            <artifactId>templates-docspace</artifactId>
-                                            <version>${docspace.version}</version>
-                                            <type>war</type>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>org.jahia.modules</groupId>
-                                            <artifactId>templates-docspace-management</artifactId>
-                                            <version>${docspace.version}</version>
-                                            <type>war</type>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${project.build.directory}/artifacts</outputDirectory>
-                                        </artifactItem>
-                                    </artifactItems>
-                                </configuration>
-                            </execution>
-                            <execution>
                                 <id>unpack-docspace</id>
                                 <phase>process-resources</phase>
                                 <goals>
@@ -242,20 +215,12 @@
                                 <configuration>
                                     <artifactItems>
                                         <artifactItem>
-                                            <groupId>org.jahia.modules</groupId>
-                                            <artifactId>templates-docspace</artifactId>
-                                            <version>${docspace.version}</version>
+                                            <groupId>org.jahia.server</groupId>
+                                            <artifactId>jahia-docspace-package</artifactId>
+                                            <version>${project.version}</version>
                                             <type>war</type>
                                             <overWrite>false</overWrite>
                                             <outputDirectory>${project.build.directory}/artifacts/docspace</outputDirectory>
-                                        </artifactItem>
-                                        <artifactItem>
-                                            <groupId>org.jahia.modules</groupId>
-                                            <artifactId>templates-docspace-management</artifactId>
-                                            <version>${docspace.version}</version>
-                                            <type>war</type>
-                                            <overWrite>false</overWrite>
-                                            <outputDirectory>${project.build.directory}/artifacts/docspace-management</outputDirectory>
                                         </artifactItem>
                                     </artifactItems>
                                 </configuration>
@@ -395,7 +360,7 @@
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>org.jahia.server</groupId>
-                                    <artifactId>jahia-dm-pack-war</artifactId>
+                                    <artifactId>jahia-dm-package</artifactId>
                                     <version>${project.version}</version>
                                     <type>war</type>
                                     <overWrite>false</overWrite>
