--- a/docspace-package/pom.xml
+++ b/docspace-package/pom.xml
@@ -47,6 +47,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-docspace-package</artifactId>
     <name>Jahia Docspace Package</name>
+    <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <dependencies>
@@ -75,14 +76,14 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-docspace</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-docspace-management</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
