--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -217,7 +217,7 @@
                                         <artifactItem>
                                             <groupId>org.jahia.server</groupId>
                                             <artifactId>jahia-docspace-package</artifactId>
-                                            <version>${project.version}</version>
+                                            <version>1.0-SNAPSHOT</version>
                                             <type>war</type>
                                             <overWrite>false</overWrite>
                                             <outputDirectory>${project.build.directory}/artifacts/docspace</outputDirectory>
