--- a/docspace-package/pom.xml
+++ b/docspace-package/pom.xml
@@ -53,8 +53,22 @@
     <dependencies>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>blog</artifactId>
+            <version>1.2</version>
+            <type>war</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>calendar</artifactId>
             <version>1.3-SNAPSHOT</version>
+            <type>war</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>forum</artifactId>
+            <version>1.2.1</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -67,8 +81,22 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>rating</artifactId>
+            <version>1.2.1</version>
+            <type>war</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>social</artifactId>
             <version>1.3-SNAPSHOT</version>
+            <type>war</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>wiki</artifactId>
+            <version>1.2</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
