--- a/war/pom.xml
+++ b/war/pom.xml
@@ -347,7 +347,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>forum</artifactId>
-            <version>1.2.1</version>
+            <version>1.3-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
