--- a/pom.xml
+++ b/pom.xml
@@ -73,9 +73,9 @@
         <jahia-ce.package.version>${project.version}</jahia-ce.package.version>
         <jahia.project.structure.version>2</jahia.project.structure.version>
 
-        <jahia.archivers.version>2.8</jahia.archivers.version>
-        <jahia.configurators.version>2.51</jahia.configurators.version>
-        <jahia.deployers.version>2.5</jahia.deployers.version>
+        <jahia.archivers.version>2.10-SNAPSHOT</jahia.archivers.version>
+        <jahia.configurators.version>2.53-SNAPSHOT</jahia.configurators.version>
+        <jahia.deployers.version>2.7-SNAPSHOT</jahia.deployers.version>
 
         <pluto.version>2.0.2</pluto.version>
         <ant.version>1.8.2</ant.version>
@@ -111,7 +111,7 @@
 
 
         <!-- Jahia Maven plugin version and default settings -->
-        <jahia.plugin.version>2.76</jahia.plugin.version>
+        <jahia.plugin.version>3.0-SNAPSHOT</jahia.plugin.version>
         <!-- common settings -->
         <jahia.configure.useDataStore>true</jahia.configure.useDataStore>
         <jahia.configure.storeFilesInDB>false</jahia.configure.storeFilesInDB>
@@ -286,6 +286,7 @@
             </releases>
             <snapshots>
                 <enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
             </snapshots>
         </pluginRepository>
     </pluginRepositories>
@@ -418,7 +419,7 @@
                 </plugin>
                 <plugin>
                     <groupId>org.jahia.server</groupId>
-                    <artifactId>maven-jahia-plugin</artifactId>
+                    <artifactId>jahia-maven-plugin</artifactId>
                     <version>${jahia.plugin.version}</version>
                 </plugin>
                 <plugin>
@@ -439,7 +440,7 @@
                                             org.jahia.server
                                         </groupId>
                                         <artifactId>
-                                            maven-jahia-plugin
+                                            jahia-maven-plugin
                                         </artifactId>
                                         <versionRange>
                                             [2.61,)
