--- a/docspace-package/pom.xml
+++ b/docspace-package/pom.xml
@@ -95,6 +95,13 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>userregistration</artifactId>
+            <version>1.3-SNAPSHOT</version>
+            <type>war</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>wiki</artifactId>
             <version>1.2</version>
             <type>war</type>
