--- a/war/pom.xml
+++ b/war/pom.xml
@@ -297,7 +297,7 @@
         <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
             <artifactId>acme</artifactId>
-            <version>1.2</version>
+            <version>1.3-SNAPSHOT</version>
             <type>zip</type>
             <scope>runtime</scope>
         </dependency>
