--- a/war/pom.xml
+++ b/war/pom.xml
@@ -557,7 +557,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>poll</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.3</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
