--- a/war/pom.xml
+++ b/war/pom.xml
@@ -42,7 +42,7 @@
     <parent>
         <groupId>org.jahia.server</groupId>
         <artifactId>jahia-pack-root</artifactId>
-        <version>6.6.1.5-SNAPSHOT</version>
+        <version>6.6.1.5</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-war</artifactId>
@@ -303,7 +303,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-web-space</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -326,7 +326,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>blog</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -368,7 +368,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>wiki</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
