--- a/war/pom.xml
+++ b/war/pom.xml
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>formbuilder</artifactId>
-            <version>1.4</version>
+            <version>1.5-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -158,7 +158,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>poll</artifactId>
-            <version>1.3</version>
+            <version>1.4-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -333,7 +333,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>forum</artifactId>
-            <version>1.3</version>
+            <version>1.4-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
