--- a/war/pom.xml
+++ b/war/pom.xml
@@ -42,7 +42,7 @@
     <parent>
         <groupId>org.jahia.server</groupId>
         <artifactId>jahia-pack-root</artifactId>
-        <version>6.6.1.6-SNAPSHOT</version>
+        <version>6.6.1.6</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-war</artifactId>
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>formbuilder</artifactId>
-            <version>1.5-SNAPSHOT</version>
+            <version>1.5</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -158,7 +158,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>poll</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -179,7 +179,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rating</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -273,7 +273,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -333,14 +333,14 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>forum</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>newsletter</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -368,7 +368,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>wiki</artifactId>
-            <version>1.5-SNAPSHOT</version>
+            <version>1.5</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
