--- a/war/pom.xml
+++ b/war/pom.xml
@@ -144,7 +144,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>news</artifactId>
-            <version>1.2</version>
+            <version>1.3-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -158,7 +158,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>poll</artifactId>
-            <version>1.4</version>
+            <version>1.5-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -179,7 +179,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rating</artifactId>
-            <version>1.4</version>
+            <version>1.5-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -326,7 +326,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>blog</artifactId>
-            <version>1.4</version>
+            <version>1.5-SNAPSHOT</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
