--- a/war/pom.xml
+++ b/war/pom.xml
@@ -243,9 +243,27 @@
             <version>2.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>templates-bootstrap</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>bootstrap-components</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>bootstrap</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
 		<!-- end of Jahia Forge Modules -->
 
-        <!-- LDAP -->
+         <!-- LDAP -->
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
