--- a/war/pom.xml
+++ b/war/pom.xml
@@ -42,7 +42,7 @@
     <parent>
         <groupId>org.jahia.server</groupId>
         <artifactId>jahia-pack-root</artifactId>
-        <version>6.6.2.0-SNAPSHOT</version>
+        <version>6.6.2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-pack-war</artifactId>
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>formbuilder</artifactId>
-            <version>1.7-SNAPSHOT</version>
+            <version>1.7</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -144,7 +144,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>news</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -200,7 +200,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>socialsharing</artifactId>
-            <version>1.4-SNAPSHOT</version>
+            <version>1.4</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
@@ -317,7 +317,7 @@
         <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
             <artifactId>acmespace</artifactId>
-            <version>1.5-SNAPSHOT</version>
+            <version>1.4</version>
             <type>zip</type>
             <scope>runtime</scope>
         </dependency>
@@ -368,7 +368,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>wiki</artifactId>
-            <version>1.6-SNAPSHOT</version>
+            <version>1.6</version>
             <type>war</type>
             <scope>runtime</scope>
         </dependency>
