--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <artifactId>jahia-pack-root</artifactId>
     <name>Jahia Package Project Root</name>
     <groupId>org.jahia.server</groupId>
-    <version>6.6.2.0</version>
+    <version>6.6.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <inceptionYear>2004</inceptionYear>
     <!--
@@ -132,9 +132,9 @@
     </properties>
 
     <scm>
-        <connection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/tags/JAHIA_6_6_2_0</connection>
-        <developerConnection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/tags/JAHIA_6_6_2_0</developerConnection>
-        <url>https://devtools.jahia.com/svn/jahia_pack/tags/JAHIA_6_6_2_0</url>
+        <connection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA_6_6_2_0_RC</connection>
+        <developerConnection>scm:svn:https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA_6_6_2_0_RC</developerConnection>
+        <url>https://devtools.jahia.com/svn/jahia_pack/branches/JAHIA_6_6_2_0_RC</url>
     </scm>
     <developers>
         <developer>
