--- a/pom.xml
+++ b/pom.xml
@@ -248,7 +248,20 @@
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
+        </repository>        
+        <repository>
+            <id>jahia-internal</id>
+            <name>Jahia Internal Repository</name>
+            <url>https://devtools.jahia.com/nexus/content/groups/internal</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
         </repository>
+
     </repositories>
 
     <pluginRepositories>
