--- a/war/pom.xml
+++ b/war/pom.xml
@@ -245,7 +245,7 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
-            <artifactId>templates-bootstrap</artifactId>
+            <artifactId>sample-bootstrap-templates</artifactId>
             <version>2.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
