--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -54,7 +54,7 @@
         <product.version>${project.version}</product.version>
         <product.fullname>Jahia_xCM_v${product.version}</product.fullname>
         <staging.dir>${project.build.directory}/izpack</staging.dir>
-        <izpack.version>4.3.5-jahia-beta6</izpack.version>
+        <izpack.version>4.3.5-jahia-beta7-SNAPSHOT</izpack.version>
     </properties>
 
     <dependencies>
@@ -145,7 +145,7 @@
                             <stayAlive>false</stayAlive>
                             <icon>${project.build.directory}/images/jahia.ico</icon>
                             <jre>
-                                <minVersion>1.5.0_07</minVersion>
+                                <minVersion>1.6.0_10</minVersion>
                             </jre>
                             <splash>
                                 <file>${project.build.directory}/images/splash.bmp</file>
